# hand_obstacle_detector2

./: Makefile  README.md  env.example  pyproject.toml  requirements.txt  yolov8n-seg.pt
docs/: README.md
readme/: FUNCTION_CALL_CHAIN.md  QUANTIZATION_SUMMARY.md
src/: export_quantized_yolo.py  main.py  realsense_camera.py  simple_quantization_test.py  test_quantization.py  yolo_obstacle_detector.py
src/quantized_models/yolov8n-seg_fp16/: metadata.yaml  yolov8n-seg.xml
